fix overflow x

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,7 +14,7 @@ code {
     monospace;
 }
 body {
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 // body {
